--- a/react_intro/react_intro/klassekart/klassekart/src/App.css
+++ b/react_intro/react_intro/klassekart/klassekart/src/App.css
@@ -50,8 +50,8 @@
   padding: 2em;
   width: 2em;
   margin-top: 2em;
-  border: solid white 2px;
   font-size: 1.5em;
+  border: solid rgb(255, 255, 255) 2px;
 }
 
 .container {
@@ -65,7 +65,7 @@
   align-items: center;
   width: 50%;
   height: 100%;
-  background: red;
+  background: blue;
 }
 
 .rightside {
@@ -74,5 +74,21 @@
   align-items: center;
   width: 50%;
   height: 100%;
-  background: blue;
+  background: red;
+}
+
+
+.profile-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;  
+  align-items: center;
+}
+
+.profile-box   {
+  border: solid black 2px;
+  background: coral;
+  height: 50%;
+
 }
