--- a/kurs/src/App.css
+++ b/kurs/src/App.css
@@ -1,4 +1,5 @@
-.button-container {
+/* styles.css */
+.Home_container {
   position: relative;
   height: 100vh;
 }
@@ -6,11 +7,6 @@
 .button {
   position: absolute;
   padding: 10px;
-  cursor: pointer;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 4px;
 }
 
 .top-right {
@@ -21,4 +17,8 @@
 .bottom-right {
   bottom: 10px;
   right: 10px;
+}
+
+.coursebox {
+  display: flex;
 }
