--- a/nodeapplications/httprequests/src/App.css
+++ b/nodeapplications/httprequests/src/App.css
@@ -1,78 +1,98 @@
+*{
+  overflow: hidden;
+}
+
 :root {
+  --background-color: #000;
   --primary: #000000;
-  --button: #3a0057;
-  --buttonHoverBorder: #ffffff;
-  --textcolor:#ffffff;
-  --containerBorder:#ffffff;
- 
+  --primary-navbar: #000;
+  --primary-button: #ffffff;
+  --primary-button-hover: #ffffff;
+  --button-text: #000000;
+  --table-header-text: #000;
+}
+body {
+  color: var(--primary-button);
+  background-color: var(--background-color);
 }
 
-body{
-  background-color: var(--primary);
+
+.App{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.App {
+.navbar{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 10vh;
+  background-color: var(--primary-navbar);
+  position: sticky;
+  top: 0;
+}
+
+.mainbox{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.content{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%; 
+  border: solid black 1px;
+  font-size: 2em;
+}
+
+button{
+  width: 10%;	
+  height: 80%;
+  background-color: var(--primary-button);
+  color: var(--button-text);
+  border: solid rgb(0, 0, 0) 5px;
+}
+button:hover{
+  border: solid 5px var(--primary-button-hover);
+}
+
+
+.table-container {
+  overflow-y: auto;
+  overflow-x: auto;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px; /* Smaller padding */
+  margin: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.styled-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 1em; /* Adjust font size as needed */
+  color: var(--primary-button);
+}
+
+.styled-table th, .styled-table td {
+  border: 1px solid #ddd;
+  padding: 6px; /* Smaller padding */
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.styled-table th {
+  background-color: #000000;
+  color: var(--table-header-text);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.buttonContainer {
-  display: flex;
-  border: solid var(--containerBorder);
-}
-
-.requestContainer {
-  border: solid var(--containerBorder);
-}
-
-.button {
-  background-color: var(--button);
-  width: 80%;
-  height: 10rem;
-  margin: 20px;
-  font-size: 2em;
-  color: white;
-}
-
-.button:hover{
-  border: solid var(--buttonHoverBorder);
-}
-h1{
-  color: var(--textcolor) ;
-}
-
-
