--- a/nodeapplications/withpost/frontend/src/App.css
+++ b/nodeapplications/withpost/frontend/src/App.css
@@ -1,6 +1,3 @@
-*{
-  overflow: hidden;
-}
 
 :root {
   --background-color: #000;
@@ -84,12 +81,17 @@ button:hover{
   border-collapse: collapse;
   font-size: 1em; /* Adjust font size as needed */
   color: var(--primary-button);
+  width: auto; /* Allows the table to grow as needed */
+  min-width: 100%; /* Ensures it's at least as wide as its container */
+
 }
 
 .styled-table th, .styled-table td {
   border: 1px solid #ddd;
   padding: 6px; /* Smaller padding */
   text-align: center;
+  padding: 8px 16px; /* Adjust padding for better spacing */
+  min-width: 100px; /* Minimum width for each cell */
 }
 
 .styled-table th {
@@ -105,7 +107,7 @@ button:hover{
 #deletebutton{
   width: 40%;	
   height: 80%;
-  justify-content: center;
+  
 }
 
 #updatebutton{
