--- a/nodeapplications/withpost/frontend/src/table_style.css
+++ b/nodeapplications/withpost/frontend/src/table_style.css
@@ -15,12 +15,7 @@
     font-size: 1em; /* Adjust font size as needed */
 }
 
-.styled-table th, .styled-table td {
-    border: 1px solid #ddd;
-    padding: 6px; /* Smaller padding */
-    text-align: center;
-}
-
 .styled-table th {
     background-color: #f2f2f2;
+    min-width: 100%;
 }
